[package]
name = "extrusion_line"
version = "0.1.0"
authors = ["RajeshPachaikani <rajeshpachaikani@live.in>"]
edition = "2018"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.5.0"
panic-semihosting = "0.6.0"
stm32f1xx-hal = {version = "0.9.0", features = ["rt", "stm32f103", "medium"]}
lcd-lcm1602-i2c = "0.1.0"
cortex-m-rtic = "1.1.2"
alloc-cortex-m = "0.4.2"
heapless = "0.7.11"